src/test/deca/context/valid/testRead.deca
{
    int a = readInt();
     float b, c;
     b = readFloat();
     c = readInt();
}