src/test/deca/context/invalid/compClass2.deca
class A {

}

class B extends A {

}

class C extends Object {

}

{
    A a = new A();
    B b = new B();
    C c = new C();
    int Integer
    if (a == Integer) {

    }
}
//ERROR :18: